fix advanced search collapsable button styling [PT #188828155] / #85

--- a/src/applications/primo/www/components/search/searchBar/_search-bar.scss
+++ b/src/applications/primo/www/components/search/searchBar/_search-bar.scss
@@ -948,15 +948,15 @@ prm-advanced-search {
     .warning-message {
         @extend .prm-warning-color.prm-hue1;
     }
-    // Collapsed Advanced Search block at top of search results
-    .collapsed-area {
-        .collapsed-button prm-icon {
-            color: $accent-color;
-        }
 
-        .collapsed-button.md-button:hover:not([disabled]),
-        .collapsed-button.md-button:focus:not([disabled]) {
-            color: $accent-color;
+    // Collapsable Advanced Search block at top of search results
+    .collapsed-button.md-button {
+        &:hover,
+        &:focus {
+            &:not([disabled]) {
+                background-color: $accent-color;
+                color: $white;
+            }
         }
     }
 
